--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 :root {
-    --text-color: #DBE4EF;
-    --card-front-color: #144480;
-    --card-back-color: #00F4BF;
+    --text-color: #e4bde2;
+    --card-front-color: #161897;
+    --card-back-color: #be93e5;
 }
 
 body {
