--- a/assets/style.css
+++ b/assets/style.css
@@ -77,13 +77,13 @@ body {
 
 .cartao__conteudo__resposta {
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
+    background-color: rgba(217, 211, 219, 0.2);
     border: 4px solid var(--card-back-color);
 }
 
 footer {
-    background-color: black;
-    color: white;
+    background-color: rgb(95, 10, 121);
+    color: rgb(237, 192, 241);
     position: fixed;
     bottom: 0;
     width: 100%;
