--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: #e4bde2;
-    --card-front-color: #161897;
+    --card-front-color: #a81e9c;
     --card-back-color: #be93e5;
 }
 
